fixing block two mobile image resolution on mobile

--- a/src/components/BlockOne/BlockOne.css
+++ b/src/components/BlockOne/BlockOne.css
@@ -355,7 +355,7 @@
   }
 
   .blockone-imgtwo {
-    height: 570px;
+    height: 98%;
   }
 
   .blockone-text-container {
@@ -369,7 +369,7 @@
   }
 
   .blockone-imgtwo {
-    height: 560px;
+    height: 98%;
   }
 }
 
